Fixed styling on home page

--- a/about.html
+++ b/about.html
@@ -29,12 +29,12 @@
 
     <div class="content"> 
       <div class="page-header">
-        <h1>About me</h1>
+        <h2>* ABOUT ME</h2>
         <p class="header-definition">ikigan: reason of being</p>
       </div>
 
         <div id="about-who">
-          <h3 class="bold">Who am I?</h3>
+          <h5>Who am I?</h5>
           <p>Junior @ Carnegie Mellon University
             <br>
             <br>
@@ -47,7 +47,7 @@
         </div>
 
         <div id="about-how">
-          <h3>How did I get here?</h3>
+          <h5>How did I get here?</h5>
           <p>Growing up, I never knew what I wanted to do but I knew I wanted to help people.
             <br>
             <br>
@@ -59,7 +59,7 @@
         </div>
 
         <div id="about-where">
-          <h3 class="bold">Where am I going?</h3>
+          <h5>Where am I going?</h5>
           <p>I thrive in a collaborative environment where multiple perspectives are take when tacking any problem. 
             <br>
             <br>
