--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
   <nav>
     <div class="nav-left">
-      <a class="nav-left-item" id="home-page" href="index.html"><img src="images/logo.png" alt="CoStar Case Study" onclick="location.href = 'home.html';">
+      <a class="nav-left-item" id="home-page" href="index.html">Kelli Kuramoto
       </a>
     </div>
 
@@ -49,7 +49,7 @@
         <p>* UX Design <br> *Oct 2022 - Nov 2022</p>
       </div>
       <div class="thumbnail front">
-        <img class="thumbnail-large" src="images/costar-thumbnail-sm.png" alt="CoStar Case Study">
+        <img class="thumbnail-large" src="images/zoo-thumbnail-sm.png" alt="CoStar Case Study">
       </div>
     </div>
     </div>
@@ -64,7 +64,7 @@
           <p>* CUI Design <br> *Feb 2023 - March 2023</p>
         </div>
         <div class="thumbnail front">
-          <img class="thumbnail-large" src="images/costar-thumbnail-sm.png" alt="CoStar Case Study">
+          <img class="thumbnail-large" src="images/cui-thumbnail-sm.png" alt="CoStar Case Study">
         </div>
       </div>
     </div>
@@ -94,7 +94,7 @@
           <p>* Web Development <br> *Aug 2022 - Mar 2023</p>
         </div>
         <div class="thumbnail front">
-          <img class="thumbnail-large" src="images/costar-thumbnail-sm.png" alt="CoStar Case Study">
+          <img class="thumbnail-large" src="images/cafe23-thumbnail-sm.png" alt="CoStar Case Study">
         </div>
     </div>
     </div>
