--- a/play.html
+++ b/play.html
@@ -30,12 +30,12 @@
 
     <div class="content"> 
       <div class="page-header">
-        <h1>Play</h1>
+        <h2>* PLAY</h2>
         <p class="header-definition">otaku: extreme level of enthusiasm for a topic or activity</p>
       </div>
 
         <div id="play-diving">
-          <h3 class="bold">Springboard diving</h3>
+          <h5>Springboard diving</h5>
           <div class= "grid-container-play">
             <div>
               I am on Carnegie Mellon’s varsity Swimming and Diving team. I currently hold the school records for both 1M and 3M springboard diving. 
@@ -44,16 +44,14 @@
               My favorite thing about diving is the teammates and bonds that I have forged during my time at CMU.
             </div>
             <div>
-              <img class="img-diving" src="images/diving1.png" alt="Girl diving" width="300" height="200">
-              <img class="img-diving" src="images/diving2.png" alt="Girl diving" width="300" height="200">
-              <img class="img-diving" src="images/diving3.png" alt="Girl diving" width="133" height="200">
+              <img src="images/play-diving.png" alt="Girl diving" width="648" height="352">
             </div>
           </div>
         </div>
 
         <div id="play-photo">
-          <h3>Photography</h3>
-          <div class="grid-container-play" >
+          <h5>Photography</h5>
+            <div class="grid-container-play" >
             <div>
               I shoot both film and digital photography. I have been practicing photography since my 7th grade elective class: Photography 1.            
               <br>
@@ -61,16 +59,13 @@
               My favorite types of photography are landscape and portrait. Medium is equally loved!              
             </div>
             <div>
-              <img class="img-photo" src="images/photo1.png" alt="Pittsburgh landscape" width="300" height="200">
-              <img class="img-photo" src="images/photo2.png" alt="Yosemite landscape" width="133" height="200">
-              <img class="img-photo" src="images/photo3.png" alt="San Diego landscape" width="133" height="200">
-              <img class="img-photo" src="images/photo4.png" alt="Clock landscape" width="133" height="200">
+              <img src="images/play-photography.png" alt="Photos of landscapes" width="648" height="352">
             </div>
           </div>
         </div>
 
         <div id="play-swe">
-          <h3 class="bold">Software engineering</h3>
+          <h5>Software engineering</h5>
           <div class="grid-container-play" >
             <div>
               Along with UX design, I also enjoy software development specifically Front end, as well as playing around with some databases. 
@@ -79,8 +74,7 @@
               I believe my interdisciplinary studies at Carnegie Mellon have equipped me to become a better designer as a whole.           
             </div>
             <div>
-              <img class="img-photo" src="images/swe1.png" alt="Xpresso website" width="300" height="200" onclick="window.open('https://kellikuramoto.github.io/pui-22/homework_6b/', '_blank');">
-              <img class="img-photo" src="images/swe2.png" alt="Tartordle website" width="300" height="200" onclick="window.open('https://kellikuramoto.github.io/pui-22/tartordle/', '_blank');">
+              <img src="images/play-dev.png" alt="Images of desktops" width="648" height="316">
             </div>
           </div>
         </div>
