--- a/index.html
+++ b/index.html
@@ -4,8 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Kelli Kuramoto</title>
+    <title>Kelli with an eye.</title>
     <link rel="icon" href="images/logo.png" type="image/x-icon">
+    
+    <!-- Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,200;0,9..40,300;0,9..40,400;0,9..40,500;0,9..40,600;0,9..40,700;0,9..40,800;0,9..40,900;0,9..40,1000;1,9..40,300;1,9..40,400;1,9..40,500;1,9..40,600;1,9..40,700;1,9..40,800;1,9..40,900;1,9..40,1000&display=swap" rel="stylesheet">
     
     <!-- CSS -->
     <link rel="stylesheet" type="text/css" href="styles.css">
@@ -29,39 +34,57 @@
   </nav>
 
   <div class="content" id="homepage"> 
-    <p class="homepage-subtitle">User experience</p>
-    <h1 id="designer"><span>DESIGNER</span><br> *</h1>
-    <p class="homepage-subtitle">Web application</p>
-    <h1 id="developer"><span>DEVELOPER</span> <br> *</h1>
-    <p class="homepage-subtitle">Springboard</p>
-    <h1 id="diver"><span>DIVER</span></h1>
+    <p id="title">Kelli with an i,<br>
+      <span id="designer-ul">Product designer</span> with an eye</p>
+    <p class="info">❈ Senior at <span id="college-ul">Carnegie Mellon</span> studying Information Systems <br>and Human Computer Interaction</p>
+    <p class="info">⦿ UX Design Intern @ <span id="company-ul">Amazon</span></p>
   </div>
 
-  <div id="recent-work">
-    <h2>* RECENT WORK</h2>
+  <div class="content" id="recent-work">
+    <h2><span class="h2-unbold">⦿</span> Recent Work</h2>
     <div class="grid-container">
+
+    <!-- Amazon Thumbnail -->    
+    <a href="amazon.html">
+      <div class="grid-item">
+        <div id="amazon" class="thumbnail-container">
+          <div class="thumbnail back">
+            <h4>Amazon Music</h4>
+            <p>Artist Monetization Feature</p>
+            <p>#user-research #ux-design</p>
+          </div>
+          <div class="thumbnail front">
+            <img class="thumbnail-large" src="images/amazon-thumbnail-sm.png" alt="CoStar Case Study">
+          </div>
+      </div>
+      </div>
+      </a>
+
+    <!-- Zoo Thumbnail -->
     <a href="zoo.html">
     <div class="grid-item">
-        <div id="zoo" class="thumbnail-container">
-      <div class="thumbnail back">
-        <h4>Pittsburgh Zoo</h4>
-        <p>Data driven dashboard display</p>
-        <p>* UX Design <br> *Oct 2022 - Nov 2022</p>
+      <div id="zoo" class="thumbnail-container">
+        <div class="thumbnail back">
+          <h4>Pittsburgh Zoo</h4>
+          <p>Data driven dashboard display</p>
+          <p>#dashboard-design #motion-design</p>
+        </div>
+
+        <div class="thumbnail front">
+          <img class="thumbnail-large" src="images/zoo-thumbnail-sm.png" alt="CoStar Case Study">
+        </div>
       </div>
-      <div class="thumbnail front">
-        <img class="thumbnail-large" src="images/zoo-thumbnail-sm.png" alt="CoStar Case Study">
-      </div>
-    </div>
     </div>
     </a>
 
+    <!-- Archie Thumbnail -->
     <a href="cui.html">
     <div class="grid-item">
       <div id="archie" class="thumbnail-container">
         <div class="thumbnail back">
           <h4>Archie</h4>
           <p>Conversational agent for hotels</p>
-          <p>* CUI Design <br> *Feb 2023 - March 2023</p>
+          <p>#conversational-design #data-privacy</p>
         </div>
         <div class="thumbnail front">
           <img class="thumbnail-large" src="images/cui-thumbnail-sm.png" alt="CoStar Case Study">
@@ -70,13 +93,14 @@
     </div>
     </a>
 
+    <!-- CoStar Thumbnail -->
     <a href="costar.html">
     <div class="grid-item">
       <div id="costar" class="thumbnail-container">
         <div class="thumbnail back">
           <h4>Costar Group</h4>
           <p>Modernized the CoStar Product</p>
-          <p>* UX Design <br> *Jun 2022 - Aug 2022</p>
+          <p>#ui-design #design-system</p>
         </div>
         <div class="thumbnail front">
           <img class="thumbnail-large" src="images/costar-thumbnail-sm.png" alt="CoStar Case Study">
@@ -85,22 +109,8 @@
     </div>
     </a>
 
-    <a href="cafe23.html">
-    <div class="grid-item">
-      <div id="cafe23" class="thumbnail-container">
-        <div class="thumbnail back">
-          <h4>Cafe23</h4>
-          <p>Web application for coffee shop</p>
-          <p>* Web Development <br> *Aug 2022 - Mar 2023</p>
-        </div>
-        <div class="thumbnail front">
-          <img class="thumbnail-large" src="images/cafe23-thumbnail-sm.png" alt="CoStar Case Study">
-        </div>
-    </div>
-    </div>
-    </a>
   </div>
-</div>
+  </div>
 
 </body>
 
