Updated UI and content of about and play page

--- a/about.html
+++ b/about.html
@@ -32,52 +32,44 @@
         </div>
     </nav>
 
-    <div class="content"> 
-      <div class="page-header">
-        <h2>* ABOUT ME</h2>
-        <p class="header-definition">ikigan: reason of being</p>
+    <div class="content" id="about"> 
+      <h1>About me</h1>
+      <p class="definition">ikigan: reason of being</p>
+
+      <div id="about-img">
+        <img src="images/headshot.png" alt="Headshot of Kelli Kuramoto">
       </div>
 
-        <div id="about-who">
-          <h5>Who am I?</h5>
-          <p>Junior @ Carnegie Mellon University
-            <br>
-            <br>
-            B.S. Information Systems and Additional Major in Human Compter Interaction
-            <br>
-            <br>
-            I believe the combination of my technical and non traditional creative background makes me a stronger designer. 
-            I strive to embrace a variety of perspectives when addressing problems with a human centered solution.
-          </p>
-        </div>
+      <div id="about-text">
+        <h2><span class="h2-unbold">❈</span> Who am I?</h2>
+        <p class="component-text">
+          Senior @ Carnegie Mellon University
+          <br>
+          <br>
+          B.S. Information Systems and Additional Major in Human Computer Interaction
+          <br>
+          <br>
+          I believe the combination of my technical and non traditional creative background makes me a stronger designer. 
+          I strive to embrace a variety of perspectives when addressing problems with a human centered solution.
+        </p>
 
-        <div id="about-how">
-          <h5>How did I get here?</h5>
-          <p>Growing up, I never knew what I wanted to do but I knew I wanted to help people.
-            <br>
-            <br>
-            In highschool I started to drift towards political science. My first internship was with the local congressman, working to pass a proposal on increased subsidized housing for low income families. 
-            <br>
-            <br>
-            However, once I got to college I fell in love with human centered design process and ux design. In my classes, I realized that there were so many ways that I could help people.
-          </p>
-        </div>
-
-        <div id="about-where">
-          <h5>Where am I going?</h5>
-          <p>I thrive in a collaborative environment where multiple perspectives are take when tacking any problem. 
-            <br>
-            <br>
-            I am always seeking to help others through my design and have make efforts towards more accessible design.
-          </p>
-        </div>
-        
+        <h2><span class="h2-unbold">❈</span> How did I get here?</h2>
+        <p class="component-text">
+          Growing up, I never knew what I wanted to do but I knew I wanted to help people.
+          <br>
+          <br>
+          In high school I started to drift towards political science. My first internship was with the local congressman, working to pass a proposal on increased subsidized housing for low income families. 
+          <br>
+          <br>
+          However, once I got to college I fell in love with human centered design process and ux design. In my classes, I realized that there were so many ways that I could help people.
+        </p>
+      </div>
     </div>  
 </body>
 
 <footer>
   <div class="nav-left">
-    <p>Made from scratch.</p>
+    <p>Coded from scratch.</p>
   </div>
 
   <div class="nav-right">
