--- a/index.html
+++ b/index.html
@@ -114,6 +114,18 @@
 
 </body>
 
+<footer>
+  <div class="nav-left">
+    <p>Coded from scratch.</p>
+  </div>
+
+  <div class="nav-right">
+    <a class="nav-right-item" href="play.html">Play</a>
+    <a class="nav-right-item" href="about.html">About</a>
+    <a class="nav-right-item" href="index.html#recent-work">Work</a>
+  </div>
+</footer>
+
 <!-- <footer>
   <div class="nav-left">
     <p>Made from scratch. 2023</p>
