--- a/play.html
+++ b/play.html
@@ -6,6 +6,11 @@
 
     <title>Kelli Kuramoto</title>
     <link rel="icon" href="images/logo.png" type="image/x-icon">
+
+    <!-- Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,200;0,9..40,300;0,9..40,400;0,9..40,500;0,9..40,600;0,9..40,700;0,9..40,800;0,9..40,900;0,9..40,1000;1,9..40,300;1,9..40,400;1,9..40,500;1,9..40,600;1,9..40,700;1,9..40,800;1,9..40,900;1,9..40,1000&display=swap" rel="stylesheet">
     
     <!-- CSS -->
     <link rel="stylesheet" type="text/css" href="styles.css">
@@ -28,58 +33,58 @@
         </div>
     </nav>
 
-    <div class="content"> 
-      <div class="page-header">
-        <h2>* PLAY</h2>
-        <p class="header-definition">otaku: extreme level of enthusiasm for a topic or activity</p>
-      </div>
+    <div class="content" id="play"> 
+      <h1>Play</h1>
+      <p class="definition">ukiyo: fleeting life</p>
 
-        <div id="play-diving">
-          <h5>Springboard diving</h5>
-          <div class= "grid-container-play">
-            <div>
-              I am on Carnegie Mellon’s varsity Swimming and Diving team. I currently hold the school records for both 1M and 3M springboard diving. 
-              <br>
-              <br>
-              My favorite thing about diving is the teammates and bonds that I have forged during my time at CMU.
-            </div>
-            <div>
-              <img src="images/play-diving.png" alt="Girl diving" width="648" height="352">
-            </div>
-          </div>
+      <div class="play-component">
+        <div id="play-diving-img">
+          <img src="images/play-diving.png" alt="3 photos of girl diving">
         </div>
 
-        <div id="play-photo">
-          <h5>Photography</h5>
-            <div class="grid-container-play" >
-            <div>
+        <div id="play-diving-text">
+          <h2><span class="h2-unbold">⦿</span> Springboard diving</h2>
+          <p class="component-text">
+            I am on Carnegie Mellon’s varsity Swimming and Diving team. I currently hold the school records for both 1M and 3M springboard diving. 
+            <br>
+            <br>
+            My favorite thing about diving is the teammates and bonds that I have forged during my time at CMU.
+          </p>
+        </div>
+      </div>
+
+      <div class="play-component">
+        <div id="play-photo-img">
+          <img src="images/play-photography.png" alt="Landscape photography of California">
+        </div>
+
+        <div id="play-photo-text">
+            <h2><span class="h2-unbold">⦿</span> Photography</h2>
+            <p class="component-text">
               I shoot both film and digital photography. I have been practicing photography since my 7th grade elective class: Photography 1.            
               <br>
               <br>
               My favorite types of photography are landscape and portrait. Medium is equally loved!              
-            </div>
-            <div>
-              <img src="images/play-photography.png" alt="Photos of landscapes" width="648" height="352">
-            </div>
-          </div>
+            </p>
+        </div>
+      </div>
+
+      <div class="play-component">
+        <div id="play-swe-img">
+          <img src="images/play-dev.png" alt="Desktop web applications">
         </div>
 
-        <div id="play-swe">
-          <h5>Software engineering</h5>
-          <div class="grid-container-play" >
-            <div>
-              Along with UX design, I also enjoy software development specifically Front end, as well as playing around with some databases. 
-              <br>
-              <br>
-              I believe my interdisciplinary studies at Carnegie Mellon have equipped me to become a better designer as a whole.           
-            </div>
-            <div>
-              <img src="images/play-dev.png" alt="Images of desktops" width="648" height="316">
-            </div>
-          </div>
+        <div id="play-swe-text">
+          <h2><span class="h2-unbold">⦿</span> Software engineering</h2>
+          <p class="component-text">
+            Along with UX design, I also enjoy software development specifically Front end, as well as playing around with some databases. 
+            <br>
+            <br>
+            The web application on the left is an employee management system and the mobile application on the right is a college campus resell platform!            
+          </p>
         </div>
-        
-    </div>  
+      </div> 
+    </div> 
 </body>
 
 <footer>
