--- a/zoo.html
+++ b/zoo.html
@@ -7,6 +7,11 @@
     <title>Kelli Kuramoto</title>
     <link rel="icon" href="images/logo.png" type="image/x-icon">
     
+    <!-- Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,200;0,9..40,300;0,9..40,400;0,9..40,500;0,9..40,600;0,9..40,700;0,9..40,800;0,9..40,900;0,9..40,1000;1,9..40,300;1,9..40,400;1,9..40,500;1,9..40,600;1,9..40,700;1,9..40,800;1,9..40,900;1,9..40,1000&display=swap" rel="stylesheet">
+
     <!-- CSS -->
     <link rel="stylesheet" type="text/css" href="styles.css">
 
@@ -176,8 +181,15 @@
 
         <div class="casestudy-component">
           <h4>Final design</h4>
-          <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="1100" height="650" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2FMlsDMM9rvtgD8pNHbqdd8Y%2FData-Driven-Display-in-Digital-Form-with-Motion-%2526-Reflection%3Fpage-id%3D0%253A1%26node-id%3D95-1712%26viewport%3D485%252C250%252C0.09%26scaling%3Dscale-down%26starting-point-node-id%3D95%253A111">
-          </iframe>
+          <video width="1100" height="650" controls preload="auto">
+            <!-- The video source -->
+            <source src="videos/zoo-demo.mov" type="video/mp4">
+            <!-- Optionally, include additional source formats for browser compatibility -->
+            <!-- <source src="your-video-file.webm" type="video/webm"> -->
+            <!-- <source src="your-video-file.ogv" type="video/ogg"> -->
+            Your browser does not support the video tag.
+          </video>
+
         </div>
 
         <div class="casestudy-component">
