Updated UI and demo video of zoo case study

--- a/zoo.html
+++ b/zoo.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Kelli Kuramoto</title>
+    <title>Kelli with an eye.</title>
     <link rel="icon" href="images/logo.png" type="image/x-icon">
     
     <!-- Fonts -->
@@ -34,8 +34,9 @@
 
     <div class="content"> 
       <div class="thumbnail-casestudy">
-        <div class="title">
-          <h2>DATA DASHBOARD for the <span id="zoo-underline">PITTSBURGH ZOO</span></h2>
+        <div class="casestudy-title">
+          <h2> Data Dashboard for the: <span class="bold" id="zoo-underline">Pittsburgh Zoo</span></h2>
+
         </div>
         <img class="thumbnail-img animate__animated animate__fadeInLeft animate__slower" src="images/zoo-thumbnail.png" alt="Pittsburgh Zoo Case Study">
       </div>
@@ -43,33 +44,28 @@
       <div class="casestudy-content">
         <div class="casestudy-component" id="costar-background">
           <div class="component-left">
-            <h4>Overview</h4>
-            <p>
+            <h2><span class="h2-unbold">⦿</span> Overview</h2>
+            <p class="component-text">
               As part of my Human-Computer Interaction studio class, our assignment was to create a data-driven display for the Pittsburgh Zoo & Aquarium, utilizing a given dataset. Within this project, my responsibilities included optimizing the alignment of the user interface elements and creating seamless animations to enhance the overall user experience of the dashboard.            
             </p>
           </div>
           <div class="component-right">
-            <h4>Background</h4>
-            <p>Team
-              <ul>
-                <li>Katie Sun, Team member</li>
-                <li>Jason Wei, Team member</li>
-              </ul>
-              October 2022 - November 2022             
-            </p>
+            <h2><span class="h2-unbold">⦿</span> Background</h2>
+            <p class="component-text"><i>Team:</i> Katie Sun and Jason Wei</p>
+             <p class="component-text"><i>Timeline:</i>  October 2022 - November 2022 </p>
           </div>
         </div>
 
         <div class="casestudy-component">
-          <h4>The challenge</h4>
-          <p class="header">Create a data driven dashboard that meets the needs of the zoo-goers while simultaneously balancing business needs & constraints</p>
+          <h2><span class="h2-unbold">⦿</span> The Challenge</h2>
+          <p class="component-text component-header">Create a data driven dashboard that meets the needs of the zoo-goers while simultaneously balancing business needs & constraints</p>
         </div>
 
         <div class="casestudy-component">
-          <h4>Our solution</h4>
+          <h2><span class="h2-unbold">⦿</span> Our Solution</h2>
           <div id= "grid-container">
           <div>
-            <p class="header">Provide high level overview of upcoming events</p>
+            <p class="component-text component-header">Provide high level overview of upcoming events</p>
             <ul>
               <li>Bird’s eye perspective increases engagement and exploration for all exhibits by showing exhibits with events</li>
               <li>1st person perspective allows users to gauge distance of event and other exhibits to current location</li>
@@ -85,7 +81,7 @@
           </div>
   
           <div>
-            <p class="header">Real time data and updates about upcoming events & capacity</p>
+            <p class="component-text component-header">Real time data and updates about upcoming events & capacity</p>
             <ul>
               <li>Reduce wait times at events by notifying visitors if current event is full</li>
               <li>Increase event engagement by providing next show times</li>
@@ -93,7 +89,7 @@
           </div>
 
           <div>
-            <p class="header">Highlighted and updated important information for visitors</p>
+            <p class="component-text component-header">Highlighted and updated important information for visitors</p>
             <ul>
               <li>Modules on the dashboard rotate between high-level information and Exhibit specific information</li>
               <li>High level (Bird’s eye view): Rental Information & Featured events</li>
@@ -107,12 +103,12 @@
         </div>
 
         <div class="casestudy-component">
-          <h4>Uncovering user needs</h4>
-          <p class="header">Parsed research findings of 5 different personas using different modeling techniques to uncover insights</p>
-          <p>
+          <h2><span class="h2-unbold">⦿</span> Uncovering user needs</h2>
+          <p class="component-text component-header">Parsed research findings of 5 different personas using different modeling techniques to uncover insights</p>
+          <p class="component-text">
             <img src="images/zoo-userneeds.png" class="img-center" alt="Pittsburgh Zoo Case Study">
 
-            By modeling the data, we wanted to answer the fundamental question: <span class="bold">Why do people visit the zoo? </span><br>
+            By modeling the data, we wanted to answer the fundamental question: <span class="zoo-bold-color">Why do people visit the zoo? </span><br>
 
             We hypothesized that the answer to this question was essential to determining what information was relevant, as well as the most effective mode of delivery. <br>
 
@@ -132,9 +128,9 @@
         </div>
 
         <div class="casestudy-component">
-          <h4>Parallel prototyping and experimentation</h4>
-          <p class="header">Parsed research findings of 5 different personas using different modeling techniques to uncover insights</p>
-          <p>
+          <h2><span class="h2-unbold">⦿</span> Parallel prototyping and experimentation</h2>
+          <p class="component-header component-text">Parsed research findings of 5 different personas using different modeling techniques to uncover insights</p>
+          <p class="component-text">
             We each sketched 2-4 dashboards in order to generate a wide range of ideas. Then, we came together and created a composite sketch, taking the most successful parts of each person’s drafts and identifying common components across all designs. 
 
             <img src="images/zoo-sketches.png" class="img-center" alt="Pittsburgh Zoo Case Study">
@@ -146,10 +142,10 @@
         </div>
 
         <div class="casestudy-component">
-          <h4>Leaning into the 3rd dimension</h4>
-          <p class="header">Leveraged the characteristics of 3 dimensionality to provide 2 types of information: high level and exhibit specific</p>
-          <p>
-            We wanted to make sure this inclusion was not merely aesthetic, but adding value to our design. We constantly asked ourselves: <span class="bold"> How is the third dimension of the map adding to the user’s experience? </span>
+          <h2><span class="h2-unbold">⦿</span> Leaning into the 3rd dimension</h2>
+          <p class="component-header component-text">Leveraged the characteristics of 3 dimensionality to provide 2 types of information: high level and exhibit specific</p>
+          <p class="component-text">
+            We wanted to make sure this inclusion was not merely aesthetic, but adding value to our design. We constantly asked ourselves: <span class="zoo-bold-color"> How is the third dimension of the map adding to the user’s experience? </span>
             
             <img src="images/zoo-povs.png" class="img-center" alt="Pittsburgh Zoo Case Study">
 
@@ -160,10 +156,10 @@
         </div>
 
         <div class="casestudy-component">
-          <h4>Emphasizing temporality & information selection</h4>
-          <p class="header">Highlighted and updated information based on real time data and current events</p>
-          <p>
-            We also considered how to differentiate our dashboard from a static map. <span class="bold">Our answer: real-time data about the ongoings at the zoo. </span>
+          <h2><span class="h2-unbold">⦿</span> Emphasizing temporality & information selection</h2>
+          <p class="component-header component-text">Highlighted and updated information based on real time data and current events</p>
+          <p class="component-text">
+            We also considered how to differentiate our dashboard from a static map. <span class="zoo-bold-color">Our answer: real-time data about the ongoings at the zoo. </span>
             <br>
             When selecting information, our strategy focused heavily on temporality-- what did the user really need to know at a given time?          
             <img src="images/zoo-time-modules.png" class="img-center" alt="Pittsburgh Zoo Case Study">
@@ -171,40 +167,46 @@
         </div>
 
         <div class="casestudy-component">
-          <h4>Using animation to engage visitors</h4>
-          <p class="header">Used animations to provide affordances of upcoming transitions, as well as perspective changes</p>
-          <p>
+          <h2><span class="h2-unbold">⦿</span> Using animation to engage visitors</h2>
+          <p class="component-header component-text">Used animations to provide affordances of upcoming transitions, as well as perspective changes</p>
+          <p class="component-text">
             In order to create the smoothest experience for our visitors, we were thoughtful in our use of animations to provide feedforward for viewers to hint at a screen change. Animations of the star popping up captures the users eye, which decreases the suddenness of the perspective changes from high level to exhibit level information.           
             <img src="images/zoo-animation.png" class="img-center" alt="Pittsburgh Zoo Case Study">
           </p>     
         </div>
 
         <div class="casestudy-component">
-          <h4>Final design</h4>
-          <video width="1100" height="650" controls preload="auto">
-            <!-- The video source -->
-            <source src="videos/zoo-demo.mov" type="video/mp4">
-            <!-- Optionally, include additional source formats for browser compatibility -->
-            <!-- <source src="your-video-file.webm" type="video/webm"> -->
-            <!-- <source src="your-video-file.ogv" type="video/ogg"> -->
-            Your browser does not support the video tag.
-          </video>
+          <h2><span class="h2-unbold">⦿</span> Final dashboard</h2>
 
-        </div>
+          <div class="component-left">
+            <p class="component-text bold text-center">First person's perspective</p>
+            <p class="component-text text-center">Displayed location based information when zooming into current event</p>
 
-        <div class="casestudy-component">
-          <h4>What I learned</h4>
-          <p>
-            I’ve created about a dozen or so hi-fi prototypes for various design classes, but I have never been quite as proud as I was when my team created this data-driven display. This project pushed my bounds of thinking in multiple ways and shaped me into a better design.           
-          </p>
-          <ol>
-            <li>
-              Design materials aren’t always colors and shapes. This assignment has pushed the boundaries on my knowledge of what could be used as a “design material” to expand medium such as data and animation. Constantly pushing myself to ask questions like, what characteristics of data or capabilities of animation can I leverage to create the best experience for my users?
-            </li>
-            <li>
-              There are no mistakes, especially when you're in school. At the begging of this unit, we notice most of our fellow classmates were utilizing a map for their dashboard. While ideating how to stand out, we realized none of them were leveraging natural mapping or 3 dimensional maps to enhance the user experience. By trying something completely new to all of us, we created a product we are proud of.             
-            </li>
-          </ol> 
+
+            <video autoplay loop muted preload="auto" class="full-size">
+              <!-- The video source -->
+              <source src="videos/zoo-closeup-demo.mov" type="video/mp4">
+              <!-- Optionally, include additional source formats for browser compatibility -->
+              <!-- <source src="your-video-file.webm" type="video/webm"> -->
+              <!-- <source src="your-video-file.ogv" type="video/ogg"> -->
+              Your browser does not support the video tag.
+            </video>
+          </div>
+
+          <div class="component-right">
+            <p class="component-text bold text-center">Bird's eye view</p>
+            <p class="component-text text-center">Displayed overall and time based information when zooming out to entire map</p>
+
+            <video autoplay loop muted preload="auto" class="full-size">
+              <!-- The video source -->
+              <source src="videos/zoo-wide-demo.mov" type="video/mp4">
+              <!-- Optionally, include additional source formats for browser compatibility -->
+              <!-- <source src="your-video-file.webm" type="video/webm"> -->
+              <!-- <source src="your-video-file.ogv" type="video/ogg"> -->
+              Your browser does not support the video tag.
+            </video>
+          </div>
+
         </div>
       </div>  
     </div>
@@ -213,7 +215,7 @@
 
 <footer>
   <div class="nav-left">
-    <p>Made from scratch.</p>
+    <p>Coded from scratch.</p>
   </div>
 
   <div class="nav-right">
