--- a/amazon.html
+++ b/amazon.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Kelli Kuramoto</title>
+    <title>Kelli with an eye.</title>
     <link rel="icon" href="images/logo.png" type="image/x-icon">
 
     <!-- Fonts -->
@@ -515,7 +515,7 @@
 
 <footer>
   <div class="nav-left">
-    <p>Made from scratch.</p>
+    <p>Coded from scratch.</p>
   </div>
 
   <div class="nav-right">
