--- a/costar.html
+++ b/costar.html
@@ -6,6 +6,11 @@
 
     <title>Kelli Kuramoto</title>
     <link rel="icon" href="images/logo.png" type="image/x-icon">
+
+    <!-- Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,200;0,9..40,300;0,9..40,400;0,9..40,500;0,9..40,600;0,9..40,700;0,9..40,800;0,9..40,900;0,9..40,1000;1,9..40,300;1,9..40,400;1,9..40,500;1,9..40,600;1,9..40,700;1,9..40,800;1,9..40,900;1,9..40,1000&display=swap" rel="stylesheet">
     
     <!-- CSS -->
     <link rel="stylesheet" type="text/css" href="styles.css">
@@ -174,7 +179,7 @@
 
 <footer>
   <div class="nav-left">
-    <p>Made from scratch.</p>
+    <p>Coded from scratch.</p>
   </div>
 
   <div class="nav-right">
