Updated UI for costar and cui case study

--- a/zoo.html
+++ b/zoo.html
@@ -36,8 +36,8 @@
       <div class="thumbnail-casestudy">
         <div class="casestudy-title">
           <h2> Data Dashboard for the: <span class="bold" id="zoo-underline">Pittsburgh Zoo</span></h2>
-
         </div>
+
         <img class="thumbnail-img animate__animated animate__fadeInLeft animate__slower" src="images/zoo-thumbnail.png" alt="Pittsburgh Zoo Case Study">
       </div>
 
@@ -51,14 +51,11 @@
           </div>
           <div class="component-right">
             <h2><span class="h2-unbold">⦿</span> Background</h2>
-            <p class="component-text"><i>Team:</i> Katie Sun and Jason Wei</p>
-             <p class="component-text"><i>Timeline:</i>  October 2022 - November 2022 </p>
-          </div>
-        </div>
 
-        <div class="casestudy-component">
-          <h2><span class="h2-unbold">⦿</span> The Challenge</h2>
-          <p class="component-text component-header">Create a data driven dashboard that meets the needs of the zoo-goers while simultaneously balancing business needs & constraints</p>
+            <p class="component-text">Team: Katie Sun and Jason Wei</p>
+            <p class="component-text">Timeline: October 2022 - November 2022 </p>
+            <p class="component-text">Goal:<span class="zoo-bold-color"> Create a data driven dashboard that meets the needs of the zoo-goers while simultaneously balancing business needs & constraints</span></p>
+          </div>
         </div>
 
         <div class="casestudy-component">
