--- a/amazon.html
+++ b/amazon.html
@@ -54,9 +54,9 @@
           </div>
           <div class="component-right">
             <h2><span class="h2-unbold">⦿</span> Background</h2>
-             <p class="component-text"><i>Team:</i>  Amazon Music for Artists</p>
-             <p class="component-text"><i>Timeline:</i>  May 2023 - August 2023 </p>
-             <p class="component-text"><i>Goal:</i>  Define what a “next generation box set”, aka fan bundles is</p>
+            <p class="component-text">Team: Amazon Music for Artists</p>
+            <p class="component-text">Timeline: May 2023 - August 2023 </p>
+            <p class="component-text">Goal:<span class="amazon-bold-color"> Define what a “next generation box set”, aka fan bundles is</span></p>
           </div>
         </div>
         <!-- [END] Component -->
