--- a/cui.html
+++ b/cui.html
@@ -34,70 +34,62 @@
 
     <div class="content"> 
       <div class="thumbnail-casestudy">
-        <div class="title">
-          <h2>ARCHIE: <span id="cui-underline">CONVERSATIONAL AGENT</span> for HOTELS</h2>
+        <div class="casestudy-title">
+          <h2> Archie: <span class="bold" id="cui-underline">Conversational Agent</span> for Hotels</h2>
         </div>
+
         <img class="thumbnail-img animate__animated animate__fadeInLeft animate__slower" src="images/cui-thumbnail.png" alt="CoStar Case Study">
       </div>
 
       <div class="casestudy-content">
         <div class="casestudy-component" id="costar-background">
           <div class="component-left">
-            <h4>Overview</h4>
+            <h2><span class="h2-unbold">⦿</span> Overview</h2>
             <p>
               As part of my Human-Computer Interaction studio class, our assignment was to design a conversational agent for our giving domain: hospitality. My primary responsibility was leading the ideation process for the agent and carefully considering the user experience throughout the design.            
             </p>
           </div>
           <div class="component-right">
-            <h4>Background</h4>
-            <p>Team
-              <ul>
-                <li>Michael Auld, Team member</li>
-                <li>Charlene Chen, Team member</li>
-                <li>Yueer Tang, Team member</li>
-              </ul>
-              February 2023 - March 2023            
-            </p>
+            <h2><span class="h2-unbold">⦿</span> Background</h2>
+            
+            <p class="component-text">Team: Michael Auld, Charlene Chen, and Yueer Tang</p>
+            <p class="component-text">Timeline: February 2023 - March 2023</p>
+            <p class="component-text">Goal:<span class="zoo-bold-color"> Create a conversational agent that supports various types of interactions</span></p>
           </div>
         </div>
 
         <div class="casestudy-component">
-          <h4>The challenge</h4>
-          <p 
-          class="header">Create a conversational agent that supports various types of interactions, including transactions and more complex tasks
-          </p>
-        </div>
-
-
-        <div class="casestudy-component">
-          <h4>Narrowing our domain</h4>
-          <p class="header">Conducted secondary research within 4 subdomains of hospitality to identify the ideal ecosystem for our problem</p>
-          <p>
+          <h2><span class="h2-unbold">⦿</span> Narrowing our domain</h2>
+          <p class="component-text component-header">Conducted secondary research within 4 subdomains of hospitality to identify the ideal ecosystem for our problem</p>
+          <p class="component-text">
             We conducted research in 4 subdomains: (1) Restaurants (2) Hotels (3) Resorts (4) Concerts      
 
-            <img src="images/cui-domain.png" class="img-center" alt="Conversational Agent Case Study" style="height: 350px; width:460px; " >
+            <img src="images/cui-domain.png" class="img-center full-size" alt="Conversational Agent Case Study">
             We decided to narrow our scope down to the hotel industry, because we identified a problem that we felt could be solved by the characteristics of a conversational agent: <span class="bold">87% of hotels experience staffing shortages, leading to increase strain and decreased service</span>. This lead us to our overarching question:
             <br>
-            <span class="bold">How do we give hotel guests an elevated experience without increasing work load for employees?</span>
+            <span class="cui-bold-color">How do we give hotel guests an elevated experience without increasing work load for employees?</span>
           </p>
         </div>
 
         <div class="casestudy-component">
-          <h4>Stepping into the shoes our of user(s)</h4>
-          <p class="header">Modeled a stakeholder and customer journey map map to understand how different actors interacted within the hotel ecosystem
+          <h2><span class="h2-unbold">⦿</span> Stepping into the shoes our of user(s)</h2>
+
+          <p class="component-text component-header">Modeled a stakeholder and customer journey map map to understand how different actors interacted within the hotel ecosystem
+            <img src="images/cui-models.png" class="img-center full-size" alt="Conversational Agent Case Study">
           </p>
-          <p>
-            <img src="images/cui-models.png" class="img-center" alt="Conversational Agent Case Study">
-          </p>      
         </div>
 
         <div class="casestudy-component">
-          <h4>Leveraging the strengths of a conversational agent</h4>
-          <p class="header">Conversational agents can streamline requests and leverage conversational principles to nudge guests
+          <h2><span class="h2-unbold">⦿</span> Leveraging the strengths of a conversational agent</h2>
+
+          <p class="component-text component-header">Conversational agents can streamline requests and leverage conversational principles to nudge guests
           </p>
-          <p>
-            Once we understood the journey of our target user: a hotel guest and how they interact with other staff members. We identified areas of automation along the customer journey to serve as prompts for our conversational agent: Archie.           
-            <img src="images/cui-journey.png" class="img-center" alt="Conversational Agent Case Study">
+
+          <p class="component-text">
+            Once we understood the journey of our target user: a hotel guest and how they interact with other staff members. We identified areas of automation along the customer journey to serve as prompts for our conversational agent: Archie.  
+
+            <img src="images/cui-journey.png" class="img-center full-size" alt="Conversational Agent Case Study">
+
             We also saw a clear opportunity to push the bounds of our conversational agent further by leveraging the characteristics of conversation to nudge guests by: 
             <ul>
               <li>
@@ -110,15 +102,18 @@
                 providing suggestions
               </li>
             </ul>
+
             An example of this is:
-            <img src="images/cui-nudge.png" class="img-center" alt="Conversational Agent Case Study">
+            <img src="images/cui-nudge.png" class="img-center full-size" alt="Conversational Agent Case Study">
           </p>     
         </div>
 
         <div class="casestudy-component">
-          <h4>Keeping the user in control</h4>
-          <p class="header">Created a “key lock” system to address the issue of privacy and keep the user in control </p>
-          <p>
+          <h2><span class="h2-unbold">⦿</span> Keeping the user in control</h2>
+
+          <p class="component-text component-header">Created a “key lock” system to address the issue of privacy and keep the user in control </p>
+
+          <p class="component-text">
             We had to very carefully consider when and how our CUI would interface with a guest, especially with the premonition that conversational agents are always listening (think Alexa). 
             <br>
             We went ideated through an entire spectrum of solutions and finally landed on an artifact “unlocking” Archie. We decided to use the hotel keycard itself as a key to Archie. 
@@ -128,31 +123,23 @@
         </div>
 
         <div class="casestudy-component">
-          <h4>Bringing Archie alive</h4>
-          <p class="header">Incorporating humor as a mechanism to humanize our conversational agent and increase the comfortability for the user</p>
-          <p>
+          <h2><span class="h2-unbold">⦿</span> Bringing Archie alive</h2>
+
+          <p class="component-text component-header">Incorporating humor as a mechanism to humanize our conversational agent and increase the comfortability for the user</p>
+
+          <p class="component-text">
             One of the biggest pieces of critique that our group received was the fact that our conversational agent seemed “too robotic”. We brainstormed different ways to humanize our agent and landed on leveraging humor as a technique. An example of this is:                      
-            <img src="images/cui-humor.png" class="img-center" alt="Conversational Agent Case Study">
+            <img src="images/cui-humor.png" class="img-center full-size" alt="Conversational Agent Case Study">
           </p>     
         </div>
 
         <div class="casestudy-component">
-          <h4>Final conversational agent</h4>
-          <p>Click on me to start a conversation!</p>
+          <h2><span class="h2-unbold">⦿</span> Final conversational agent</h2>
+
+          <p class="component-text">Click on me to start a conversation!</p>
           <a href="https://creator.voiceflow.com/prototype/641a33e295505bd608664480"><img id="archie" src="images/cui-archie.png" class="img-center" alt="Conversational Agent Case Study"></a>
         </div>
 
-        <div class="casestudy-component">
-          <h4>What I learned</h4>
-          <p>
-          </p>
-          <ol>
-            <li>
-            </li>
-            <li>
-            </li>
-          </ol> 
-        </div>
       </div>  
     </div>
 </body>
