--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
   <div class="content" id="homepage"> 
     <p id="title">Kelli with an i,<br>
       <span id="designer-ul">Product designer</span> with an eye</p>
-    <p class="info">❈ Senior at <span id="college-ul">Carnegie Mellon</span> studying Information Systems <br>and Human Computer Interaction</p>
-    <p class="info">⦿ UX Design Intern @ <span id="company-ul">Amazon</span></p>
+    <p class="info">❈ B.S. <span id="college-ul">Carnegie Mellon</span>, Information Systems <br>and Human Computer Interaction</p>
+    <p class="info">⦿ Prev UX Design Intern @ <span id="company-ul">Amazon</span></p>
   </div>
 
   <div class="content" id="recent-work">
