Updated content for landing page, above the fold

--- a/index.html
+++ b/index.html
@@ -34,10 +34,13 @@
   </nav>
 
   <div class="content" id="homepage"> 
-    <p id="title">Kelli with an i,<br>
-      <span id="designer-ul">Product designer</span> with an eye</p>
-    <p class="info">❈ B.S. <span id="college-ul">Carnegie Mellon</span>, Information Systems <br>and Human Computer Interaction</p>
-    <p class="info">⦿ Prev UX Design Intern @ <span id="company-ul">Amazon</span></p>
+    <p id="intro">
+      <span class="blue-text"> Hi, I’m Kelly with an i. </span>
+      <span class="yellow-highlight">Product designer</span> by trade, 
+      analyzer of common nouns at heart. My body resides in 
+      <span class="red-underline">San Francisco</span> 
+      but my being is continuously foraging for paths that provide people 
+      with meaningful interactions.</p>
   </div>
 
   <div class="content" id="recent-work">
