--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
   </div>
 
   <div class="content" id="recent-work">
-    <h2><span class="h2-unbold">⦿</span> Recent Work</h2>
+    <h2>Selected Works</h2>
     <div class="grid-container">
 
     <!-- Amazon Thumbnail -->    
@@ -119,7 +119,7 @@
 
 <footer>
   <div class="nav-left">
-    <p>Coded from scratch.</p>
+    <p>Coded from scratch, <br> unlike most of my dinners ;')</p>
   </div>
 
   <div class="nav-right">
