--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
   </div>
 
   <div class="content" id="recent-work">
-    <h2>Selected Works</h2>
+    <!-- <h2>Selected Works</h2> -->
     <div class="grid-container">
 
     <!-- Amazon Thumbnail -->    
@@ -53,8 +53,7 @@
         <div id="amazon" class="thumbnail-container">
           <div class="thumbnail back">
             <h4>Amazon Music</h4>
-            <p>Artist Monetization Feature</p>
-            <p>#user-research #ux-design</p>
+            <p>Helping musicians make a living by reimagining <br>the digital experience of monetization</p>
           </div>
           <div class="thumbnail front">
             <img class="thumbnail-large" src="images/amazon-thumbnail-sm.png" alt="CoStar Case Study">
@@ -69,8 +68,7 @@
       <div id="zoo" class="thumbnail-container">
         <div class="thumbnail back">
           <h4>Pittsburgh Zoo</h4>
-          <p>Data driven dashboard display</p>
-          <p>#dashboard-design #motion-design</p>
+          <p>Helping zoo-goers navigate the park with a <br> data driven display</p>
         </div>
 
         <div class="thumbnail front">
@@ -86,8 +84,7 @@
       <div id="archie" class="thumbnail-container">
         <div class="thumbnail back">
           <h4>Archie</h4>
-          <p>Conversational agent for hotels</p>
-          <p>#conversational-design #data-privacy</p>
+          <p>Creating a conversational agent for hotels to <br>reduce tasks on an overworked industry</p>
         </div>
         <div class="thumbnail front">
           <img class="thumbnail-large" src="images/cui-thumbnail-sm.png" alt="CoStar Case Study">
@@ -102,8 +99,7 @@
       <div id="costar" class="thumbnail-container">
         <div class="thumbnail back">
           <h4>Costar Group</h4>
-          <p>Modernized the CoStar Product</p>
-          <p>#ui-design #design-system</p>
+          <p>Revamping the visual identity of the <br> CoStar Product</p>
         </div>
         <div class="thumbnail front">
           <img class="thumbnail-large" src="images/costar-thumbnail-sm.png" alt="CoStar Case Study">
