Updated footers for all pages

--- a/about.html
+++ b/about.html
@@ -69,7 +69,7 @@
 
 <footer>
   <div class="nav-left">
-    <p>Coded from scratch.</p>
+    <p>Coded from scratch, <br> unlike most of my dinners ;')</p>
   </div>
 
   <div class="nav-right">
