--- a/play.html
+++ b/play.html
@@ -89,7 +89,7 @@
 
 <footer>
   <div class="nav-left">
-    <p>Made from scratch.</p>
+    <p>Coded from scratch, <br> unlike most of my dinners ;')</p>
   </div>
 
   <div class="nav-right">
