Updated headers and spacers of Pittsburgh Zoo

--- a/amazon.html
+++ b/amazon.html
@@ -37,7 +37,7 @@
       <!-- [START] Above the Fold -->
       <div class="thumbnail-casestudy">
         <div class="casestudy-title">
-          <h2> <span id="amazon-ul">Fan Bundles:</span>  Helping Musicians make a Living</h2>
+          <h2> <span id="amazon-ul">Fan Bundles:</span> Helping Musicians make a Living</h2>
         </div>
         <img class="thumbnail-img animate__animated animate__fadeInLeft animate__slower" src="images/amazon-thumbnail.png" alt="CoStar Case Study">
       </div>
@@ -47,13 +47,13 @@
         <!-- [START] Component -->
         <div class="casestudy-component">
           <div class="component-left">
-            <h2><span class="h2-unbold">⦿</span> Overview</h2>
+            <h3>OVERVIEW</h3>
             <p class="component-text">
               One of Amazon Music’s goals for 2023 is to help support Artists by providing them with different monetization strategies. In response, the Product Design Team at Amazon Music conducted a Design Sprint to generate ideas around the topic of Artist Monetization. “Next generation box sets”, known as Fan Bundles, gained the highest confidence with regards to addressing customer needs.            
             </p>
           </div>
           <div class="component-right">
-            <h2><span class="h2-unbold">⦿</span> Background</h2>
+            <h3>BACKGROUND</h3>
             <p class="component-text">Team: Amazon Music for Artists</p>
             <p class="component-text">Timeline: May 2023 - August 2023 </p>
             <p class="component-text">Goal:<span class="amazon-bold-color"> Define what a “next generation box set”, aka fan bundles is</span></p>
@@ -73,8 +73,7 @@
           
           <!-- [START] Final Screens -->
           <div class="casestudy-component">
-            <h2><span class="h2-unbold">⦿</span> Final Screens</h2>
-
+            <h3>FINAL SCREENS</h3>
             <div class="component-left">
               <p class="component-text component-header">Amazon Music Mobile App, Finding a Bundle Flow</p>
               <video width="auto" height="430" autoplay loop muted preload="auto">
