Updated headers and spacing of costar

--- a/costar.html
+++ b/costar.html
@@ -44,14 +44,16 @@
       <div class="casestudy-content">
         <div class="casestudy-component" id="costar-background">
           <div class="component-left">
-            <h2><span class="h2-unbold">⦿</span> Overview</h2>            
+            <h3>OVERVIEW</h3>
+
             <p class="component-text">
               During Summer 2022, I had the opportunity to collaborate with two fellow UX design interns on a project aimed at aligning the CoStar Properties product with the newly introduced Cosmos design system. I undertook the task of redesigning specific tabs within the product to enhance their ability to address user needs effectively.
             </p>
           </div>
 
           <div class="component-right">
-            <h2><span class="h2-unbold">⦿</span> Background</h2>
+            <h3>BACKGROUND</h3>
+
             <p class="component-text">Team: Anna Wei, Jenna Marhburk, and CoStar Product Design Team</p>
             <p class="component-text">Timeline: June 2022 - August 2022</p>
             <p class="component-text">Goal:<span class="costar-bold-color"> Update outdated UI and UX restricted the users from using the product in an efficient manner</span></p>
@@ -59,7 +61,8 @@
         </div>
 
         <div class="casestudy-component">
-          <h2><span class="h2-unbold">⦿</span> The Solution</h2>
+          <h3>THE SOLUTION</h3>
+          
           <div id= "grid-container">
           <div>
             <p class="component-text component-header">Increased typeface + line spacing allowed for easier readability</p>
@@ -88,7 +91,7 @@
         </div>
 
         <div class="casestudy-component">
-          <h2><span class="h2-unbold">⦿</span> Getting to know my users</h2>
+          <h3>GETTING TO KNOW MY USERS</h3>
           <p class="component-text component-header">Meet with Internal CoStar employees to better understand the projected use of the product</p>
           <p class="component-text">
             Due to time and other constraints I was unable to talk with customers directly. Instead, I talked to the next best people, CoStar employees who were client facing, such as Project Managers and Sales Associates. 
@@ -105,7 +108,8 @@
         </div>
 
         <div class="casestudy-component">
-          <h2><span class="h2-unbold">⦿</span> Gathering my insights</h2>
+          <h3>GATHERING INDUSTRY INSIGHTS</h3>
+
           <p class="component-text component-header">No customization or comparability function on Peers page</p>
           <p class="component-text">
             After speaking with the previous project manager of the Peer page, I was able to gauge that the purpose of the Peers page was to allow users to compare their property against similar “peers” properties
@@ -121,7 +125,8 @@
         </div>
 
         <div class="casestudy-component">
-          <h2><span class="h2-unbold">⦿</span> Multiple design directions</h2>
+          <h3>DEBATING MULTIPLE DESIGN DIRECTIONS</h3>
+
           <p class="component-text component-header">Utilizing the Proximity Principle to increase feedback</p>
 
           <p class="component-text">
@@ -138,7 +143,8 @@
         </div>
 
         <div class="casestudy-component">
-          <h2><span class="h2-unbold">⦿</span> Switching to focus on comparability</h2>
+          <h3>SWITCHING TO FOCUS ON COMPARABILITY</h3>
+
           <p class="component-text component-header">Increasing value add by increasing user options</p>
           
           <p class="component-text">
@@ -152,7 +158,8 @@
         </div>
 
         <div class="casestudy-component">
-          <h2><span class="h2-unbold">⦿</span> Leveraging current functionality of product</h2>
+          <h3>LEVERAGING CURRENT FUNCTIONALITY OF THE PRODUCT</h3>
+
           <p class="component-text component-header">Adding toggle feature of list and map view</p>
           <p class="component-text">
             Instead of visually trying to create a new connection between the table and map view, I could leverage an existing feature of the product to achieve this goal. On the properties home page, there is a toggle feature that allows users to switch between map and list view. This feature would remove all the obstacles in my previous designs, namely too little vertical visual space.
@@ -163,8 +170,9 @@
         </div>
 
         <div class="casestudy-component">
+          <h3>FINAL DESIGNS</h3>
           <h2><span class="h2-unbold">⦿</span> Final Designs</h2>
-          <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="1100" height="650" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2FfD6MpCcWKO9F3hPzyURJbV%2FCoStar-Modernizing-Tabs%3Fpage-id%3D0%253A1%26node-id%3D0%253A3986%26viewport%3D488%252C341%252C0.15%26scaling%3Dscale-down-width%26starting-point-node-id%3D0%253A2768" allowfullscreen>
+          <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="770" height="455" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2FfD6MpCcWKO9F3hPzyURJbV%2FCoStar-Modernizing-Tabs%3Fpage-id%3D0%253A1%26node-id%3D0%253A3986%26viewport%3D488%252C341%252C0.15%26scaling%3Dscale-down-width%26starting-point-node-id%3D0%253A2768" allowfullscreen>
           </iframe>
         </div>
 
